--- a/Ejercicios_Variables/.project
+++ b/Ejercicios_Variables/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Ejercicios_Variables</name>
+	<name>Estructuras_Selectivas</name>
 	<comment></comment>
 	<projects>
 	</projects>
