--- a/Matriz_Ej03/.project
+++ b/Matriz_Ej03/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Matriz_Ej03</name>
+	<name>PoloTic_Matriz_Ej03</name>
 	<comment></comment>
 	<projects>
 	</projects>
