--- a/Vectores_Ej_E/.project
+++ b/Vectores_Ej_E/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Vectores_Ej_E</name>
+	<name>PoloTic_Vectores_Ej_E</name>
 	<comment></comment>
 	<projects>
 	</projects>
