--- a/CopiadorTexto/.project
+++ b/CopiadorTexto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CopiadorTexto</name>
+	<name>Protecto01_CopiadorTexto</name>
 	<comment></comment>
 	<projects>
 	</projects>
