--- a/BuscadorPalabras/.project
+++ b/BuscadorPalabras/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BuscadorPalabras</name>
+	<name>Protecto03_BuscadorPalabras</name>
 	<comment></comment>
 	<projects>
 	</projects>
