--- a/PoloTic_Java_[C_08_M2]/.project
+++ b/PoloTic_Java_[C_08_M2]/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PoloTic_Matriz_Ej02</name>
+	<name>PoloTic_Java_[C_08_M2]</name>
 	<comment></comment>
 	<projects>
 	</projects>
