--- a/PoloTic_Java_[C_08]/.project
+++ b/PoloTic_Java_[C_08]/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Vectores</name>
+	<name>PoloTic_Java_[C_08]</name>
 	<comment></comment>
 	<projects>
 	</projects>
