--- a/PoloTic_Java_[P1_CopyText]/.project
+++ b/PoloTic_Java_[P1_CopyText]/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Proyecto01_CopiadorTexto</name>
+	<name>PoloTic_Java_[P1_CopyText]</name>
 	<comment></comment>
 	<projects>
 	</projects>
