--- a/PoloTic_Java_[P2_Calculadora]/.project
+++ b/PoloTic_Java_[P2_Calculadora]/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Proyecto02_Calculadora</name>
+	<name>PoloTic_Java_[P2_Calculadora]</name>
 	<comment></comment>
 	<projects>
 	</projects>
