Proyecto 03 - Buscador de Palabras.

--- a/PoloTic_Java_[P3_WordSearcher]/.project
+++ b/PoloTic_Java_[P3_WordSearcher]/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Proyecto03_BuscadorPalabras</name>
+	<name>PoloTic_Java_[P3_WordSearcher]</name>
 	<comment></comment>
 	<projects>
 	</projects>
