--- a/PoloTic_Java_[C_25_JPA]/nbproject/project.properties
+++ b/PoloTic_Java_[C_25_JPA]/nbproject/project.properties
@@ -36,14 +36,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PoloTic_Java__C_25_JPA_
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.49.zip=C:\\Users\\Facu\\Desktop\\Complementos y Librer\u00edas-20201207T182706Z-001\\Complementos y Librer\u00edas\\mysql-connector-java-5.1.49.zip
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Facu\\Desktop\\Complementos y Librer\u00edas-20201207T182706Z-001\\Complementos y Librer\u00edas\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.49.zip}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -89,7 +89,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=polotic_java_.c_25_jpa.PoloTic_Java_C_25_JPA
+main.class=logic.Main
 # Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
 manifest.custom.application.library.allowable.codebase=
 # Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
@@ -118,5 +118,5 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-src.dir=src
+src.PoloTic_Java_%5BC_25_JPA%5D.dir=PoloTic_Java_[C_25_JPA]
 test.src.dir=test
