--- a/PoloTic_Java_[C_30]/nbproject/private/private.properties
+++ b/PoloTic_Java_[C_30]/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Facu\\AppData\\Roaming\\NetBeans\\12.2\\tomcat80.properties
-j2ee.server.home=C:/Users/Facu/Desktop/Complementos y Librer\u00edas-20201207T182706Z-001/Complementos y Librer\u00edas/apache-tomcat-8.0.53-windows-x64/apache-tomcat-8.0.53
-j2ee.server.instance=tomcat80:home=C:\\Users\\Facu\\Desktop\\Complementos y Librer\u00edas-20201207T182706Z-001\\Complementos y Librer\u00edas\\apache-tomcat-8.0.53-windows-x64\\apache-tomcat-8.0.53
-user.properties.file=C:\\Users\\Facu\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
+deploy.ant.properties.file=C:\\Users\\Facu\\AppData\\Roaming\\NetBeans\\12.0\\tomcat90.properties
+j2ee.server.home=C:/Users/Facu/Desktop/Complementos y Librer\u00edas-20201207T182706Z-001/Complementos y Librer\u00edas/apache-tomcat-9.0.41-windows-x64
+j2ee.server.instance=tomcat90:home=C:\\Users\\Facu\\Desktop\\Complementos y Librer\u00edas-20201207T182706Z-001\\Complementos y Librer\u00edas\\apache-tomcat-9.0.41-windows-x64
+user.properties.file=C:\\Users\\Facu\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
